<resources>
    <string name="app_name">DailyRep</string>
    <string name="mensaje">Empieza tu transformacion hoy</string>
    <string name="correo">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="sinCuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="buscar_ejercicio">Buscar ejercicio...</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="parteDelCuerpo">PARTE DEL CUERPO</string>
    <string name="tipo_ejercicio">TIPO DE EJERCICIO</string>
    <string name="perfil">PERFIL</string>
    <string name="rutinas">RUTINAS</string>
    <string name="progreso">PROGRESO</string>
    <string name="ejercicios">EJERCICIOS</string>
    <string name="Bienvenido">Bienvenido a tu mejor version</string>
    <string name="mensaje1">Empecemos con tu configuracion inicial</string>
    <string name="edad">Edad</string>
    <string name="sexo">Sexo</string>
    <string name="altura">Altura</string>
    <string name="peso_actual">Peso actual</string>
    <string name="dias_entrenamiento">Elige tus dias de entrenamiento</string>
    <string name="lunes">LUNES</string>
    <string name="martes">MARTES</string>
    <string name="miercoles">MIERCOLES</string>
    <string name="jueves">JUEVES</string>
    <string name="viernes">VIERNES</string>
    <string name="sabado">SABADO</string>
    <string name="domingo">DOMINGO</string>
    <string name="Brazos">Brazos</string>
    <string name="Espalda">Espalda</string>
    <string name="Pecho">Pecho</string>
    <string name="Abdominales">Abdominales</string>
    <string name="Hombros">Hombros</string>
    <string name="Piernas">Piernas</string>
    <string name="Maquina">Maquina</string>
    <string name="Polea">Polea</string>
    <string name="Mancuernas">Mancuernas</string>
    <string name="PesoCorporal">Peso Corporal</string>
    <string name="cardio">Cardio</string>
    <string name="Barra">Barra</string>
    <string name="continuar">CONTINUAR</string>
    <string name="registro">REGISTRARME</string>
    <string name="primerosPasos">Registrate para empezar con tu transformacion</string>
    <string name="Filtrar">Filtros:</string>
    <string name="usuario">"Usuario "</string>
    <string name="Salud">Salud</string>
    <string name="PesoActual">Peso Actual</string>
    <string name="setenta">70</string>
    <string name="kg">Kg</string>
    <string name="cm">cm</string>
    <string name="alturaHint">170</string>
    <string name="edadHint">25</string>
    <string name="años">años</string>
    <string name="IMC">IMC</string>
    <string name="tuIMC">Tu IMC es</string>
    <string name="Normal">Normal</string>
    <string name="caloriasMentenimiento">Calorias de mantenimiento:</string>
    <string name="caloriasMantenimiento">Calorias de mantenimiento</string>
    <string name="caloriasRespuesta">2400 kcal</string>
    <string name="configuracion">Configuracion:</string>
    <string name="modoOscuro">MODO OSCURO</string>
    <string name="logOut">Log Out</string>
    <string name="genero">Genero</string>
    <string name="femenino">F</string>
    <string name="masculino">M</string>
    <string name="pruebaNombreEjercicio">Nombre ejercicio</string>
    <string name="descripcion">Descripcion:</string>
    <string name="TuProgreso">Tu Progreso</string>
    <string name="mensaje2">Constancia diaria y records personales</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="J">J</string>
    <string name="V">V</string>
    <string name="S">S</string>
    <string name="D">D</string>
    <string name="mensaje3">Completaste 4/5 dias de entrenamiento</string>
    <string name="RachaActual">Racha Actual</string>
    <string name="cantidadDias">0 dias</string>
    <string name="PRs">PRs personales</string>
    <string name="PressBanca">Press banca:</string>
    <string name="PesoMuerto">Peso muerto:</string>
    <string name="Sentadilla">Sentadilla:</string>
    <string name="PesoPressBanca">-------</string>
    <string name="PesoPesoMuerto">-------</string>
    <string name="PesoSentadilla">-------</string>
    <string name="EntrenamientosCompletados">Entrenamientos Completados:</string>
    <string name="contadorEntrenamientos">0</string>
    <string name="NombreUsuario">Nombre de Usuario</string>
    <string name="selecciona_actividad">Selecciona tu nivel de actividad</string>
    <string name="sedentario">SEDENTARIO</string>
    <string name="ligeramente_activo">LIGERAMENTE ACTIVO</string>
    <string name="moderadamente_activo">MODERADAMENTE ACTIVO</string>
    <string name="muy_activo">MUY ACTIVO</string>
    <string name="extremadamente_activo">EXTREMADAMENTE ACTIVO</string>
    <string name="nombreRutina">UPPER A</string>
    <string name="sesionEntrenamiento">Sesion de entrenamiento</string>
    <string name="nombreEjercicio">Press banca</string>
    <string name="serie1">Serie 1:</string>
    <string name="peso">100</string>
    <string name="cantidadReps">10</string>
    <string name="reps">reps</string>
    <string name="serie2">Serie 2</string>
    <string name="notas">Notas:</string>
    <string name="notasMensaje">Realiza un movimiento lento y controlado</string>
    <string name="anterior">ANTERIOR</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="finalizarSesion">FINALIZAR SESION</string>
    <string name="guardar">GUARDAR</string>
    <string name="IngresarNombreRutina">Ingresar nombre de la rutina</string>
    <string name="crearRutina">CREAR RUTINA</string>
    <string name="listo">LISTO</string>
    <string name="series">Series</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="pesos">Peso</string>
    <string name="unidad">Unidad</string>
    <string name="agregarSerie">AGREGAR SERIE</string>
    <string name="disminuirSerie">DISMINUIR SERIE</string>
    <string name="ejemploNombreNota">SEMANA 10-14 NOV</string>
    <string name="ingresarNota">INGRESA TU NOTA AQUI</string>
    <string name="guardarNota">GUARDAR NOTA</string>
    <string name="nroSerieEjemplo">1</string>
    <string name="NroReps">10</string>
    <string name="CantPeso">80</string>
    <string name="guardarCambios">GUARDAR CAMBIOS</string>
    <string name="guardarCambiosSP">Guardar</string>
    <string name="agregarNota">AGREGAR NOTA</string>
    <string name="editarDias">EDITAR DIAS\nSELECCIONADOS</string>
    <string name="editar">EDITAR</string>
    <string name="IngresarNombreEjercicio">Ingresar el nombre del ejercicio</string>
    <string name="selecciona_parte_cuerpo">Selecciona que parte del cuerpo trabaja el ejercicio a crear</string>
    <string name="selecciona_tipo_ejercicio">Selecciona el tipo de ejericios que estas creando</string>
    <string name="insertarDescripcion">Inserta la descripcion del ejercicio que estas creando</string>
    <string name="introducirDescripcion">AQUI INTROUCE LA DESCRIPCION DE TU EJERCICIO</string>
    <string name="crearEjercicio">CREAR EJERCICIO</string>
    <string name="AgregarSerie">AGREGAR SERIE</string>
    <string name="QuitarSerie">QUITAR SERIE</string>
    <string name="ReemplazarEjercicio">REEMPLAZAR EJERCICIO</string>
    <string name="AgregarEjercicio">AGREGAR EJERCICIOS</string>
    <string name="AgregarNotas">AGREGAR NOTAS</string>
    <string name="nada" />
    <string name="eliminarEjercicio">ELIMINAR EJERCICIO</string>


</resources>