<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/fondo_login"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineaTopeArriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.cardview.widget.CardView
        android:id="@+id/espacio_logo"
        android:layout_width="148dp"
        android:layout_height="102dp"
        app:layout_constraintTop_toTopOf="@+id/lineaTopeArriba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="50dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cuadros"
                android:elevation="2dp">
            </TextView>
            <ImageView
                android:id="@+id/logo"
                android:layout_width="258dp"
                android:layout_height="132dp"
                android:src="@drawable/logo"
                android:elevation="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nombre_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/espacio_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/textos"
        android:text="@string/dias_entrenamiento"
        android:textSize="25sp">
    </TextView>

    <LinearLayout
        android:id="@+id/formularioDiasEntrenamiento"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:weightSum="7"
        android:orientation="vertical"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@id/nombre_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="90dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/lunes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/lunes"
            android:gravity="center"
            android:background="@drawable/dia_selector"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/martes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/martes"
            android:gravity="center"
            android:background="@drawable/dia_selector"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/miercoles"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/miercoles"
            android:gravity="center"
            android:background="@drawable/dia_selector"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/jueves"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/jueves"
            android:gravity="center"
            android:background="@drawable/dia_selector"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/viernes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/viernes"
            android:gravity="center"
            android:background="@drawable/dia_selector"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/sabado"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/sabado"
            android:gravity="center"
            android:background="@drawable/dia_selector"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/domingo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/domingo"
            android:gravity="center"
            android:background="@drawable/dia_selector"
            android:textColor="@color/textos">
        </TextView>
    </LinearLayout>
    <TextView
        android:id="@+id/buttonContinuar2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/continuar"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:background="@color/naranja"
        android:textColor="@color/textos"
        app:layout_constraintTop_toBottomOf="@id/formularioDiasEntrenamiento"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>