<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/fondoPantallas"
    tools:context=".CrearEjercicio1Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_tipo_ejercicio"
        android:textSize="30sp"
        android:textColor="@color/textos">
    </TextView>

    <LinearLayout
        android:id="@+id/formularioDiasEntrenamiento"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:weightSum="6"
        android:orientation="vertical"
        android:layout_marginTop="27dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginBottom="25dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/mancuernas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/Mancuernas"
            android:gravity="center"
            android:background="@color/plomo_oscuro"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/polea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/Polea"
            android:gravity="center"
            android:background="@color/plomo_oscuro"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/maquina"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/Maquina"
            android:gravity="center"
            android:background="@color/plomo_oscuro"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/barra"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/Barra"
            android:gravity="center"
            android:background="@color/plomo_oscuro"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/pesoCorporal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/PesoCorporal"
            android:gravity="center"
            android:background="@color/plomo_oscuro"
            android:textColor="@color/textos">
        </TextView>
        <TextView
            android:id="@+id/cardio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/cardio"
            android:gravity="center"
            android:background="@color/plomo_oscuro"
            android:textColor="@color/textos">
        </TextView>
    </LinearLayout>
        <TextView
            android:id="@+id/buttonContinuar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/continuar"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="13dp"
            android:background="@color/naranja"
            android:textColor="@color/textos">
        </TextView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cuadros">
            <TextView
                android:id="@+id/textoPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textos"
                android:text="@string/perfil"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.75"
                app:layout_constraintHorizontal_bias="0.10">
            </TextView>
            <ImageView
                android:id="@+id/apartadoPerfil"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/perfil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintVertical_bias="0.10"
                app:tint="@color/textos">
            </ImageView>
            <TextView
                android:id="@+id/textoRutinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/naranja"
                android:text="@string/rutinas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.75"
                app:layout_constraintHorizontal_bias="0.36">
            </TextView>
            <ImageView
                android:id="@+id/apartadoRutinas"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/rutinas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="25dp"
                app:layout_constraintHorizontal_bias="0.34"
                app:tint="@color/naranja">
            </ImageView>
            <TextView
                android:id="@+id/textoProgreso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textos"
                android:text="@string/progreso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.75"
                app:layout_constraintHorizontal_bias="0.65">
            </TextView>
            <ImageView
                android:id="@+id/apartadoProgreso"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/progreso"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="25dp"
                app:layout_constraintHorizontal_bias="0.66"
                app:tint="@color/textos">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textos"
                android:text="@string/ejercicios"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.75"
                app:layout_constraintHorizontal_bias="0.95">
            </TextView>
            <ImageView
                android:id="@+id/apartadoEjercicios"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:src="@drawable/ejercicios"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="25dp"
                app:tint="@color/textos">
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

