<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".adapters.EjercicioEntrenamientoAdapter"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/cuadros"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="30"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:text="@string/serie1"
                android:textColor="@color/textos"
                android:textSize="28sp"
                android:paddingStart="10dp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="21"
                android:orientation="horizontal"
                android:weightSum="5">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/listo"
                    app:tint="@color/naranja"
                    android:layout_marginTop="4dp">
                </ImageView>
                <EditText
                    android:id="@+id/peso"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/peso"
                    android:textSize="30sp"
                    android:paddingTop="10dp"
                    android:textColor="@color/textos">
                </EditText>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/kg"
                    android:textSize="25sp"
                    android:paddingTop="20dp"
                    android:textColor="@color/textos"
                    android:paddingStart="5dp">
                </TextView>
                <EditText
                    android:id="@+id/reps"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cantidadReps"
                    android:textSize="35sp"
                    android:paddingTop="10dp"
                    android:textColor="@color/textos">
                </EditText>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/reps"
                    android:textSize="25sp"
                    android:paddingTop="20dp"
                    android:textColor="@color/textos"
                    android:paddingStart="5dp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>