<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfiguracionInicial1Activity"
    android:background="@drawable/fondo_login"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineaTopeArriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.cardview.widget.CardView
        android:id="@+id/espacio_logo"
        android:layout_width="148dp"
        android:layout_height="102dp"
        app:layout_constraintTop_toTopOf="@+id/lineaTopeArriba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="50dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cuadros"
                android:elevation="2dp">
            </TextView>
            <ImageView
                android:id="@+id/logo"
                android:layout_width="258dp"
                android:layout_height="132dp"
                android:src="@drawable/logo"
                android:elevation="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >
            </ImageView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nombre_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/espacio_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:textColor="@color/textos"
        android:text="@string/Bienvenido"
        android:textSize="25sp">
    </TextView>
    <TextView
        android:id="@+id/mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nombre_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="18dp"
        android:text="@string/mensaje1"
        android:textColor="@color/textos"
        android:textSize="18sp">
    </TextView>

    <LinearLayout
        android:id="@+id/formularioDatos"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:weightSum="5"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/mensaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:background="@android:color/transparent">
        <EditText
            android:id="@+id/edad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:hint="@string/edad"
            android:paddingStart="10dp"
            android:background="@color/plomo"
            android:textColor="@color/textos">
        </EditText>
        <EditText
            android:id="@+id/sexo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:hint="@string/sexo"
            android:paddingStart="10dp"
            android:background="@color/plomo"
            android:textColor="@color/textos">
        </EditText>
        <EditText
            android:id="@+id/altura"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:hint="@string/altura"
            android:paddingStart="10dp"
            android:background="@color/plomo"
            android:textColor="@color/textos">
        </EditText>
        <EditText
            android:id="@+id/pesoActual"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:hint="@string/peso_actual"
            android:paddingStart="10dp"
            android:background="@color/plomo"
            android:textColor="@color/textos">
        </EditText>
        <TextView
            android:id="@+id/buttonContinuar1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/continuar"
            android:gravity="center"
            android:background="@color/naranja"
            android:textColor="@color/textos">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>